# grafx

./: .bumpversion.cfg  .gitignore  README.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: deployment.yaml
docs/: genindex.html  genindex.html~  index.html  objects.inv  objects.inv~  py-modindex.html  py-modindex.html~  search.html  searchindex.js  searchindex.js~
docs/_sources/: index.rst.txt  index.rst.txt~
docs/_sources/graph_api/: data.rst.txt  draw.rst.txt  render.rst.txt
docs/graph_api/: data.html  data.html~  draw.html  draw.html~  render.html  render.html~  utils.html
docs/introduction/: graph.html  graph.html~  processors.html  processors.html~  render.html  render.html~
docs/processor_api/: container.html  container.html~  containers.html  core.html  core.html~  delay.html  delay.html~  dynamics.html  dynamics.html~  eq.html  eq.html~  filter.html  filter.html~  nonlinear.html~  reverb.html  reverb.html~  stereo.html
docs/references/: history.html  history.html~  reference.html  reference.html~
sphinx-doc/: build.sh  run_build.sh
sphinx-doc/source/: conf.py  index.rst
src/grafx/: __init__.py  utils.py
tests/: conftest.py  doc_samples.py  legacy.py  test_draw.py  test_processors.py  test_processors_filter.py  test_render.py
tests/graph/: test_data_configs.py  test_data_graph_with_configs.py  test_graph.py  test_render.py
tests/processors/: conftest.py  test_container.py  test_core.py  test_delay.py  test_dynamics.py  test_eq.py  test_filter.py  test_nonlinear.py  test_processors.py  test_reverb.py  test_stereo.py  utils.py
(+75 files in other folders)
