[project]
name = "GRAFX"
version = "0.5.2"
description = "An Open-Source Library For Audio Processing Graphs in PyTorch"
authors = [
    { name = "Sungho Lee" },
    { email = "sh-lee@snu.ac.kr" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch", 
    "torch_geometric", 
    "numpy", 
    "matplotlib", 
    "networkx",
    "einops",
#"monarch-cuda @ git+https://github.com/HazyResearch/flash-fft-conv.git#subdirectory=csrc/flashfftconv",
#    "flashfftconv @ git+https://github.com/HazyResearch/flash-fft-conv.git",
]

[build-system]
requires = ["setuptools", "wheel", "attrs"]
build-backend = "setuptools.build_meta"
